tests/paczka1/fuzzy1/80360472.err
Error in line 1: 8RiFQfeTM S569 38,4
Error in line 5: KJwOKqYPAdP A57 28,0
Error in line 13: MhyIDz S291 84,3
Error in line 17: MhyIDz S569 78,3
Error in line 23: np7VS S291 47,44
